--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,34 +198,6 @@ hr {
 
 /* team details */
 
-#team {
-    background-color: rgba(0, 0, 0, .6);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    overflow: hidden;
-    
-}
-
-
-#team div {
-    color: #fafafa;
-    background-color: rgba(0, 0, 0, .6);
-    width: 50%;
-    height: 300px;
-    float: left;
-    padding: 25px 0 0 10px;
-    text-align: center;
-    border: 2px solid white;
-    box-sizing: border-box;
-    
-}
-
-#team h2 {
-    color: #fafafa;
-}
-
 #team2 {
     margin-left: 10%;
     width: 100%;
@@ -239,17 +211,36 @@ hr {
     float: left;
     padding: 20px 0 0 10px;
     text-align: left;
-    font-weight: 800;
-    
+    font-weight: 900;    
 }
 
-#JB-image {
-    height: 150px;
-    width: 150px; 
+#team {
+    background-color: rgba(0, 0, 0, .6);
+    width: 100%;
+    height: auto;
+    overflow: hidden;
 }
-#BF-image {
+
+#team div {
+    
+    width: 50%;
+    padding: 25px 0 0 10px;
+    text-align: center;
+    color: #fafafa;
+    float:left;
+   
+}
+#team h2{
+    color: #fafafa;
+}
+#team h3{
+    color: #fafafa;
+}
+
+#teamImage {
     height: 150px;
-    width: 150px; 
+    width: 150px;
+    border-radius: 10px;   
 }
 
 /* gallery */
@@ -257,12 +248,19 @@ hr {
 #image {
     clear: both;
     line-height: 2;
-    column-count: 4;
-    column-gap: 1px;
+    column-count: 5;
+    column-gap: 7px;
+    margin: 1%;
+    margin-left: 1%;
+    margin-right: 1%;
+   
 }
 
 #image > img {
     width: 100%;
+    border-radius: 10px; 
+    height: 210px;
+    width: 365px;
 }
 
 /* Form */
