changes to team layout and styling on the home page + the form page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,13 +19,13 @@ h1, h2 {
     font-family: 'Roboto', sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
-    color: rgba(0, 0, 0, .6);
+    color: rgba(36, 36, 36, 0.9);
 }
 
 #logo {
     float: left;
-    font-size: 280%;
-    padding-left: 15px;
+    font-size: 350%;
+    padding-left: 35px;
 }
 
 /* navigation links */
@@ -51,7 +51,7 @@ h1, h2 {
 }
 
 #menu a:hover {
-    border-bottom: 1px solid rgba(0, 0, 0, .6);
+    border-bottom: 1px solid rgba(36, 36, 36, 0.9);
 }
 
 .active {
@@ -115,6 +115,8 @@ h1, h2 {
     right: 100px;
 
     position: absolute;
+
+    border-radius: 10px;
 }
 
 
@@ -145,7 +147,7 @@ h1, h2 {
 }
 
 hr {
-    border-top: 1.5px solid rgba(0, 0, 0, .6);
+    border-top: 1.5px solid rgba(36, 36, 36, 0.9);
     width: 100%;
     margin: 3px 0;
 }
@@ -177,7 +179,7 @@ hr {
 
 #Services {
     text-align: center;
-    margin: 20px 0;
+    margin: 30px;
     font-size: 280%;
 }
 
@@ -198,50 +200,58 @@ hr {
 
 /* team details */
 
-#team2 {
+#teamTitle {
     margin-left: 10%;
+    margin-top: 5%;
     width: 100%;
+    
+    font-size: 150%;
     
 }
 
-#team2 div {
-    color:  rgba(0, 0, 0, .6);
-    width: 100%;
-    height: 80px;
-    float: left;
-    padding: 20px 0 0 10px;
-    text-align: left;
-    font-weight: 900;    
-}
 
-#team {
-    background-color: rgba(0, 0, 0, .6);
+#OurTeam {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     width: 100%;
-    height: auto;
     overflow: hidden;
 }
 
-#team div {
-    
+#OurTeam div {
+    color: #fafafa;
+    background-color: rgba(36, 36, 36, 0.9);
     width: 50%;
-    padding: 25px 0 0 10px;
+    height: 500px;
+    float: left;
+    padding: 30px 0 0 10px;
     text-align: center;
-    color: #fafafa;
-    float:left;
-   
-}
-#team h2{
-    color: #fafafa;
-}
-#team h3{
-    color: #fafafa;
+    box-sizing: border-box;
+    
 }
 
-#teamImage {
-    height: 150px;
-    width: 150px;
-    border-radius: 10px;   
+#OurTeam h2 {
+    color: #fafafa;
+    padding: 15px;
 }
+
+#OurTeam h3 {
+    color: #fafafa;
+    padding: 7px;
+}
+
+.img1 {
+    border-radius: 10px;
+
+    
+  }
+  
+  .clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+    border-radius: 10px
+  }
 
 /* gallery */
 
@@ -281,6 +291,7 @@ hr {
     position: absolute;
     left: 10%;
     padding: 35px;
+    border-radius: 15px;
 }
 
 .contact-form > h2 {
@@ -299,7 +310,7 @@ hr {
 }
 
 .text-input:hover {
-    border-color: #3a3a3a;
+    border-color:  #0a18d4;
 }
 
 .submit_button {
@@ -308,12 +319,12 @@ hr {
     padding: 15px 32px 15px 32px;
     text-align: center;
     font-size: 100%;
-    background-color: #3c53d3a4;
+    background-color:  #0a18d4;
     color: #fafafa;
 }
 .submit_button:hover {
     background-color: #fafafa;
-    color: rgba(0, 0, 0, .6);}
+    color: rgba(36, 36, 36, 0.9);}
 
 
 
@@ -335,7 +346,7 @@ footer {
     font-size: 160%;
     margin: 1%;
     padding: 5%;
-    color: rgba(0, 0, 0, .6);
+    color: rgba(36, 36, 36, 0.9);
 }
 
 .footer_contact {
@@ -343,7 +354,7 @@ footer {
     text-align: center;
     margin: 1%;
     
-    color: rgba(0, 0, 0, .6);
+    color: rgba(36, 36, 36, 0.9);
 }
 
 
@@ -384,7 +395,7 @@ footer {
         padding: 0;
     }
 
-    #team2 > div {
+    #teamTitle > div {
         width: 100%;
         clear: both;
         height: 75px;
