change to logo add link , changed h1 to h2 in our team

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -450,7 +450,8 @@ footer {
         line-height: auto;
         column-count: auto;
         column-gap: auto;
-            }
+        margin-left: 10%;
+        margin-right: 5%;
         }
 
     #team > div {
@@ -469,6 +470,10 @@ footer {
         margin-right: 5%;
             }
     
+
+    #OurTeam div {
+        height: 400px;
+    } 
         
 
     .img1{
@@ -481,3 +486,4 @@ footer {
         height: fit-content;
         }
     }
+}
